syntax = "proto3";

package feed;

option go_package = "./feed";

// The Feed Service definition.
service FeedService {
  // GetFeed returns a stream of video recommendations for the user.
  rpc GetFeed (FeedRequest) returns (FeedResponse);
}

// Request message for getting the feed.
message FeedRequest {
  string user_id = 1;
  int32 page_size = 2;
  string last_video_id = 3; // For pagination
}

// Message representing a single video in the feed.
message Video {
  string video_id = 1;
  string video_url = 2;
  string caption = 3;
  string username = 4;
  string audio_name = 5;
  int64 likes = 6;
  int64 comments = 7;
  // XAI Explanation (from Python XAI service)
  string xai_explanation = 8; 
}

// Response message for getting the feed.
message FeedResponse {
  repeated Video videos = 1;
  string next_page_token = 2;
}
